sass/internal-page/InternalPage.scss
.InternalPage {
  margin-bottom: 20px;

  // sass-lint:disable class-name-format
  .breadcrumb {
    margin-bottom: 0;
    border-bottom: 1px solid $color-pf-black-300;
  }
  // sass-lint:enable class-name-format

  &__page-title {
    padding-bottom: 10px;
    border-bottom: 1px solid $color-pf-black-300;
    font-weight: bold;
  }
}

.FirstLevelMenuItem {
  span .fa { // sass-lint:disable-line force-element-nesting class-name-format
    padding-right: 8px;
  }
}

.LinkMenuItem {
  span .fa { // sass-lint:disable-line force-element-nesting class-name-format
    padding-right: 8px;
  }
}

.HomePageLink {
  &__icon {
    padding-left: 8px;
    font-size: 15px;
  }

  &__link {
    color: $color-pf-white;
    text-decoration: none;
  }

  &__link:hover {
    color: $color-pf-white;
    text-decoration: none;
  }

  &__link:visited {
    color: $color-pf-white;
    text-decoration: none;
  }
}

.LanguageSelect {
  position: relative;
  border: solid $color-pf-black-900;
  border-width: 0 0 0 1px;

  &__dropdown {
    padding: 3.8px 10px;
    padding-right: 24px;
    border: 0;
    outline: none;
    background: $color-pf-black;
    color: $color-pf-black-300;
    font-size: 11px;
    cursor: pointer;
    appearance: none;
  }

  &__dropdown-vmenu {
    padding-top: 5px;
    padding-bottom: 5px;
    background: $color-vmenu-header-bg-grey;
    font-size: 12px;
  }

  &__option {
    background: $color-pf-white;
    color: $color-pf-black-700;
  }

  &__icon {
    position: absolute;
    top: 50%;
    right: 4px;
    transform: translateY(-52%);
    color: $color-pf-black-300;
    cursor: pointer;
    pointer-events: none;
  }
}

// Vertical menu related css

.VerticalAdminConsoleMenu {
  &__fixed-bottom {
    position: fixed;
    bottom: 0;
    left: 0;
    border-bottom: 0;
  }
}

.nav-pf-vertical { //sass-lint:disable-line class-name-format
  width: auto;

  .secondary-nav-item-pf > a { // sass-lint:disable-line force-element-nesting class-name-format
    width: 214px;
    padding-left: 25px;
  }
}

.secondary-nav-item-pf { //sass-lint:disable-line class-name-format
  a::after {
    right: 19px !important; // sass-lint:disable-line no-important
  }
}

.container-cards-pf.container-fluid.container { //sass-lint:disable-line class-name-format force-element-nesting
  width: auto;
}

.container-pf-nav-pf-vertical { //sass-lint:disable-line class-name-format force-element-nesting
  margin-top: 65px;
  margin-left: #{$nav-pf-vertical-width - 5};
  padding-bottom: 50px;
}

.container-pf-nav-pf-vertical.collapsed-nav { //sass-lint:disable-line class-name-format force-element-nesting
  margin-left: 75px;
}

.container-pf-nav-pf-vertical.hidden-nav { //sass-lint:disable-line class-name-format force-element-nesting
  margin-left: 0;
}

.navbar-brand-txt { //sass-lint:disable-line class-name-format
  margin-left: 7em;
  line-height: 36px !important; // sass-lint:disable-line no-important
  text-transform: capitalize;
}

.navbar-brand-icon { //sass-lint:disable-line class-name-format
  position: absolute;
  top: 18px;
  height: 24px;
}

.navbar-iconic { //sass-lint:disable-line class-name-format
  a.dropdown-toggle { //sass-lint:disable-line class-name-format force-element-nesting no-qualifying-elements
    margin-top: 5px;
    background: $color-vmenu-header-bg-grey;
    color: $color-vmenu-header-text-grey;
  }

  a.dropdown-toggle:hover { //sass-lint:disable-line class-name-format force-element-nesting no-qualifying-elements
    background: $color-vmenu-header-bg-grey;
    color: $color-white;
    font-weight: bold;
  }

  a.dropdown-toggle:focus { //sass-lint:disable-line class-name-format force-element-nesting no-qualifying-elements
    background: $color-vmenu-header-bg-grey;
    color: $color-white;
    font-weight: bold;
  }

  .HomePageLink__link {
    margin-top: 5px;
    color: $color-vmenu-header-text-grey;
  }

  .HomePageLink__link:hover {
    background: $color-vmenu-header-bg-grey;
    color: $color-white;
    font-weight: bold;
  }

  .HomePageLink__link:focus {
    background: $color-vmenu-header-bg-grey;
    color: $color-white;
    font-weight: bold;
  }

  .LanguageSelect {
    margin-top: 15px;
  }
}

// sass-lint:disable force-element-nesting class-name-format nesting-depth
.container-pf-nav-pf-vertical {
  .startLeftPos {
    left: #{$nav-pf-vertical-width + 14};

    .container {
      max-width: calc(100% - #{$nav-pf-vertical-width + 14});
    }
  }

  .startTopPos {
    top: 58px;
  }

  &.collapsed-nav {
    .startLeftPos {
      left: 74px;

      .container {
        max-width: calc(100% - 74px);
      }

    }
  }
}

.nav-pf-secondary-nav {
  left: 0;
  width: #{$nav-pf-vertical-width + 14};
  z-index: 1031;
}

.nav-item-pf-header {
  margin-top: 12px;
  margin-left: 48px;
}

.nav-pf-secondary-nav .list-group-item > a {
  width: #{$nav-pf-vertical-width + 14};
  margin-left: 0;
  padding-left: 44px;
}

.VerticalMenu__secondary-collapse-btn {
  position: fixed;
  top: 60px;
  left: 0;
  height: 48px;
  background-color: $color-extra-dark-grey;
  color: $color-white;
  font-size: 20px;
  z-index: 1032;

  &:hover,
  &:active,
  &:focus,
  &:active:focus {
    background-color: $color-extra-dark-grey;
    color: $color-white;
  }
}
// sass-lint:enable force-element-nesting class-name-format nesting-depth

